<resources>
    <string name="app_name">YouTube UI</string>
    <string name="logo_text">YouTube</string>
    <string name="menu_cast">Transmitir</string>
    <string name="menu_notifications">Notificações</string>
    <string name="menu_search">Pesquisar</string>
    <string name="nav_home">Início</string>
    <string name="nav_shorts">Shorts</string>
    <string name="nav_create">Criar</string>
    <string name="nav_subscriptions">Inscrições</string>
    <string name="nav_you">Você</string>
    <string name="chip_all">Tudo</string>
    <string name="chip_java">Java</string>
    <string name="chip_android">Android</string>
    <string name="chip_music">Música</string>
    <string name="chip_live">Ao vivo</string>
    <string name="chip_games">Jogos</string>
    <string name="chip_martial">Artes marciais</string>
    <string name="thumbnail_desc">Miniatura do vídeo</string>
    <string name="more_desc">Mais opções</string>
    <string name="logo_desc">Logo</string>
    <string name="play_desc">Reproduzir ou pausar</string>
    <string name="subscribe">Inscrever-se</string>
    <string name="subscribed">Inscrito</string>
    <string name="like">Gostei</string>
    <string name="share">Compartilhar</string>
    <string name="download">Baixar</string>
    <string name="save">Salvar</string>
    <string name="comment_hint">Adicione um comentário…</string>
    <string name="next_videos">A seguir</string>
    <string name="subscribers">1,5 mil inscritos</string>
    <string name="my_initial">J</string>

    <!-- Dados de exemplo dos vídeos -->
    <string name="v1_title">Aprenda Java do zero em 1 hora | Curso completo para iniciantes</string>
    <string name="v1_channel">Dev na Prática</string>
    <string name="v1_views">1,2 mi de visualizações</string>
    <string name="v1_age">há 2 meses</string>
    <string name="v2_title">Criando seu primeiro app Android com Android Studio</string>
    <string name="v2_channel">Código Mobile</string>
    <string name="v2_views">348 mil visualizações</string>
    <string name="v2_age">há 3 semanas</string>
    <string name="v3_title">Lo-fi para estudar e programar | 3 horas de música relaxante</string>
    <string name="v3_channel">Lofi Room</string>
    <string name="v3_views">5,7 mi de visualizações</string>
    <string name="v3_age">há 1 ano</string>
    <string name="v4_title">ConstraintLayout na prática: posicionando views sem sofrer</string>
    <string name="v4_channel">Código Mobile</string>
    <string name="v4_views">92 mil visualizações</string>
    <string name="v4_age">há 5 dias</string>
    <string name="v5_title">Jiu-jitsu: 5 passagens de guarda para iniciantes</string>
    <string name="v5_channel">Tatame Aberto</string>
    <string name="v5_views">610 mil visualizações</string>
    <string name="v5_age">há 4 meses</string>
    <string name="v6_title">AO VIVO: Resolvendo desafios de lógica de programação</string>
    <string name="v6_channel">Dev na Prática</string>
    <string name="v6_views">2,1 mil assistindo</string>
    <string name="v6_age">Ao vivo</string>
    <string name="v7_title">Orientação a objetos em Java: classes, herança e polimorfismo</string>
    <string name="v7_channel">Prof. Algoritmo</string>
    <string name="v7_views">204 mil visualizações</string>
    <string name="v7_age">há 6 meses</string>
    <string name="v8_title">Os melhores momentos da rodada | Campeonato de jogos</string>
    <string name="v8_channel">Game Zone</string>
    <string name="v8_views">1,8 mi de visualizações</string>
    <string name="v8_age">há 1 semana</string>

    <!-- Textos da interface -->
    <string name="video_meta">%1$s • %2$s • %3$s</string>
    <string name="comment_sent">Comentário enviado: %1$s</string>
    <string name="watch_meta">%1$s • %2$s</string>
    <string name="likes_count">12 mil</string>
    <string name="coming_soon">%1$s em breve</string>
    <string name="coming_soon_hint">Esta aba ainda não foi implementada.</string>
    <string name="you_channel_name">Seu canal</string>
    <string name="you_channel_handle">\@seucanal • Ver canal</string>
    <string name="you_history">Histórico</string>
    <string name="you_playlists">Suas playlists</string>
    <string name="you_videos">Seus vídeos</string>
    <string name="you_downloads">Downloads</string>
    <string name="you_watch_later">Assistir mais tarde</string>
    <string name="row_icon_desc">Ícone da opção</string>
</resources>
