<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_shorts"
        android:icon="@drawable/ic_shorts"
        android:title="@string/nav_shorts" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_create"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/nav_subscriptions"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/nav_subscriptions" />
    <item
        android:id="@+id/nav_you"
        android:icon="@drawable/ic_library"
        android:title="@string/nav_you" />
</menu>
